--- a/.env
+++ b/.env
@@ -25,21 +25,21 @@ APP_SECRET=5d432a84d5981347f7020f12a3529df3
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
 # IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/blog_project
+DATABASE_URL=mysql://xxx:@xxx/xxxxx
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://blogfortoche@gmail.com:Hachibi8@localhost
+MAILER_URL=gmail://xxxx@xxx.com:xxxx8@xxx
 ###< symfony/swiftmailer-bundle ###
 
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-# GMAIL_USERNAME=blogfortoche
-# GMAIL_PASSWORD=Hachibi8
-# MAILER_DSN=smtp://$GMAIL_blogfortoche:$GMAIL_Hachibi8@gmail
+# GMAIL_USERNAME=xxx
+# GMAIL_PASSWORD=xxxx
+# MAILER_DSN=smtp://$GMAIL_xxxx:$GMAIL_xxxx@gmail
 ###< symfony/google-mailer ###
 
