--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,35 +1,15 @@
 security:
-    encoders:
-        App\Entity\User:
-            algorithm: bcrypt
-    role_hierarchy:
-        ROLE_ADMIN: [ROLE_ADMIN, ROLE_USER]
-
-
-
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: null }
-        in_database:
-            entity:
-                class: App\Entity\User
-                property: email
+        users_in_memory: { memory: null }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main: 
+        main:
             anonymous: true
+            provider: users_in_memory
 
-            provider: in_database
-            
-            form_login:
-                login_path: security_login
-                check_path: security_login
-
-            logout: 
-                path: security_logout
-                target: blog
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
@@ -39,5 +19,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
